优化测试备选城市名称

--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -19,9 +19,9 @@
 			<div class="navbar-header">
 				<p class="navbar-text navbar-left">{{ session['master_city_name']}}
 				<a class="" href="/selectaddr">[&nbsp;&nbsp;切换城市</a>&nbsp;&nbsp;
-				<a class="" href="/selectaddr">session['frist_slave_name']</a>&nbsp;&nbsp;
-				<a class="" href="/selectaddr">session['sed_slave_name']</a>&nbsp;&nbsp;
-				<a class="" href="/selectaddr">session['thrid_slave_name']&nbsp;&nbsp;]</a>
+				<a class="" href="/selectaddr">session['frist_slave_city_name']</a>&nbsp;&nbsp;
+				<a class="" href="/selectaddr">session['sed_slave_city_name']</a>&nbsp;&nbsp;
+				<a class="" href="/selectaddr">session['thrid_slave_city_name']&nbsp;&nbsp;]</a>
 				</p>
 			</div>
 			<div>
