--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -16,7 +16,7 @@
 <div class="container div-all">
 	<nav class="navbar navbar-default" style="margin:0px;" role="navigation">
 		<div class="container-fluid"> 
-			<div class="navbar-header pull-left">
+			<div class="navbar-header" style="margin: 0px;padding: 0px;">
 				<p class="navbar-text navbar-left">{{ session['master_city_name']}}
 				<a class="" href="/selectaddr">[&nbsp;&nbsp;切换城市</a>&nbsp;&nbsp;
 				<a class="" href="/selectaddr">{{session['frist_slave_city_name']}}</a>&nbsp;&nbsp;
@@ -24,7 +24,7 @@
 				<a class="" href="/selectaddr">{{session['thrid_slave_city_name']}}&nbsp;&nbsp;]</a>
 				</p>
 			</div>
-			<div class="pull-left">
+			<div>
 				<p class="navbar-text navbar-left">招聘</p>
 				<p class="navbar-text navbar-left">租房</p>
 				<p class="navbar-text navbar-left">二手房</p>
