--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -17,7 +17,7 @@
 <form role="form">
 	<div class="form-group">
 		<label for="name">名称</label>
-		<input type="text" class="form-control" name="current_id" action="/" method='GET' 
+		<input type="text" class="form-control" name="current_id" action="/" method="POST" 
 			   placeholder="请输入名称">
 	</div>
 	<button type="submit" class="btn btn-default">提交</button>
