优化标题显示

--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -17,7 +17,7 @@
 	<nav class="navbar navbar-default" style="margin:0px;" role="navigation">
 		<div class="container-fluid"> 
 			<div class="navbar-header">
-				<p class="navbar-text navbar-left cont-head-text">{{ session['master_city_name']}}
+				<p class="navbar-text navbar-left "><span class="cont-head-text">{{ session['master_city_name']}}</span>
 				<a class="" href="/selectaddr">[&nbsp;&nbsp;切换城市</a>&nbsp;&nbsp;
 				<a class="" href="/selectaddr">{{session['frist_slave_city_name']}}</a>&nbsp;&nbsp;
 				<a class="" href="/selectaddr">{{session['sed_slave_city_name']}}</a>&nbsp;&nbsp;
