--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -18,10 +18,10 @@
 		<div class="container-fluid"> 
 			<div class="navbar-header">
 				<p class="navbar-text navbar-left "><span class="cont-head-text">{{ session['master_city_name']}}</span>
-				<a class="" href="/se;ectaddr">[&nbsp;&nbsp;切换城市</a>&nbsp;&nbsp;
-				<a class="" href="/?current_id={{ session['frist_slave_city_name']}}">{{session['frist_slave_city_name']}}</a>&nbsp;&nbsp;
-				<a class="" href="/?current_id={{ session['sed_slave_city_name']}}">{{session['sed_slave_city_name']}}</a>&nbsp;&nbsp;
-				<a class="" href="/current_id={{ session['thrid_slave_city_name']}}">{{session['thrid_slave_city_name']}}&nbsp;&nbsp;]</a>
+				<a class="" href="/selectaddr">[&nbsp;&nbsp;切换城市</a>&nbsp;&nbsp;
+				<a class="" href="/?current_id={{ session['frist_slave_city_id']}}">{{session['frist_slave_city_name']}}</a>&nbsp;&nbsp;
+				<a class="" href="/?current_id={{ session['sed_slave_city_id']}}">{{session['sed_slave_city_name']}}</a>&nbsp;&nbsp;
+				<a class="" href="/?current_id={{ session['thrid_slave_city_id']}}">{{session['thrid_slave_city_name']}}&nbsp;&nbsp;]</a>
 				</p>
 			</div>
 			<div>
