完善地址页链接

--- a/pro/templates/selectaddr.html
+++ b/pro/templates/selectaddr.html
@@ -26,11 +26,11 @@
 	</div>
 	<div class="all-all">
 		<div style="text-align:center;padding:20px;">
-			<button type="button" class="btn btn-lg" style="background-color:DarkOrange;font-family: myFirstFont;src:font-weight:bold;"><a style="text-decoration:none;" href="https://www.baidu.com">进入北京58同城</a></button>
+			<button type="button" class="btn btn-lg" style="background-color:DarkOrange;font-family: myFirstFont;src:font-weight:bold;"><a style="text-decoration:none;" href="/">进入北京58同城</a></button>
 			<p>
 				<ul class="list-inline" style="font-size:14px;">
 					<li>周边推荐城市:</li>
-					<li><a style="text-decoration:none;" href="https://www.baidu.com">北京</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1">北京</a></li>
 					<li><a style="text-decoration:none;" href="https://www.baidu.com">上海</a></li>
 					<li><a style="text-decoration:none;" href="https://www.baidu.com">天津</a></li>
 					<li><a style="text-decoration:none;" href="https://www.baidu.com">保定</a></li>
