更新新链接

--- a/pro/templates/selectaddr.html
+++ b/pro/templates/selectaddr.html
@@ -46,7 +46,7 @@
 				<ul class="list-inline" style="font-size:14px;">
 					<li>搜索城市  <input type="text" id="name" placeholder=""></li>
 					<li>热门</li>
-					<li><a style="text-decoration:none;" href="">北京</a></li>
+					<li><a style="text-decoration:none;" href="?current_id=1">北京</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=9">上海</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=2">天津</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=37">保定</a></li>
@@ -94,6 +94,32 @@
 					<li><a style="text-decoration:none;" href="/?current_id=1">诸城</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=1">寿光</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=1">龙口</a></li>
+
+					<li><a style="text-decoration:none;" href="/?current_id=163">青岛</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=162">济南</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=167">烟台</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=168">潍坊</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=164">淄博</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=169">济宁</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=170">泰安</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=176">聊城</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=171">威海</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=165">枣庄</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=175">德州</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=172">日照</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=166">东营</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1565">东营</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=172">日照</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=178">菏泽</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1657">菏泽</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=177">滨州</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1650">滨州</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=173">莱芜</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1539">章丘</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1567">垦利</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1589">诸城</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1590">寿光</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1575">龙口</a></li>
 				</ul>
 			</p>
 			<p>
