修复页面异常，默认初始化变量，加入国外节点

--- a/pro/templates/selectaddr.html
+++ b/pro/templates/selectaddr.html
@@ -46,7 +46,7 @@
 				<ul class="list-inline" style="font-size:14px;">
 					<li>搜索城市  <input type="text" id="name" placeholder=""></li>
 					<li>热门</li>
-					<li><a style="text-decoration:none;" href="?current_id=1">北京</a></li>
+					<li><a style="text-decoration:none;" href="/?current_id=1">北京</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=9">上海</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=2">天津</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=37">保定</a></li>
