--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -19,9 +19,9 @@
 			<div class="navbar-header">
 				<p class="navbar-text navbar-left "><span class="cont-head-text">{{ session['master_city_name']}}</span>
 				<a class="href-non-line" href="/selectaddr">[&nbsp;&nbsp;切换城市</a>&nbsp;&nbsp;
-				<a class="href-non-line" href="/?current_id={{ session['frist_slave_city_id']}}">{{session['frist_slave_city_name']}}</a>&nbsp;&nbsp;
-				<a class="href-non-line" href="/?current_id={{ session['sed_slave_city_id']}}">{{session['sed_slave_city_name']}}</a>&nbsp;&nbsp;
-				<a class="href-non-line" href="/?current_id={{ session['thrid_slave_city_id']}}">{{session['thrid_slave_city_name']}}&nbsp;&nbsp;]</a>
+				<a class="href-non-line" href="javascript:set_addr('{{ session['frist_slave_city_id']}}'');">{{session['frist_slave_city_name']}}</a>&nbsp;&nbsp;
+				<a class="href-non-line" href="javascript:set_addr('{{ session['sed_slave_city_id']}}'')">{{session['sed_slave_city_name']}}</a>&nbsp;&nbsp;
+				<a class="href-non-line" href="javascript:set_addr('{{ session['thrid_slave_city_id']}}'')">{{session['thrid_slave_city_name']}}&nbsp;&nbsp;]</a>
 				</p>
 			</div>
 			<div>
