加入返回上一页地址设置函数

--- a/pro/templates/selectaddr.html
+++ b/pro/templates/selectaddr.html
@@ -30,7 +30,7 @@
 			<p>
 				<ul class="list-inline" style="font-size:14px;">
 					<li>周边推荐城市:</li>
-					<li><a style="text-decoration:none;" href="/?current_id=1">北京</a></li>
+					<li><a style="text-decoration:none;" href="javascript:set_addr_go_back('1');">北京</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=9">上海</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=2">天津</a></li>
 					<li><a style="text-decoration:none;" href="/?current_id=37">保定</a></li>
