--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -45,8 +45,8 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 
 {% block mainlink %}
 <p>
-	<a href="https://www.baidu.com">{{session['master_city_name']}}58同城</a><span>></span>
-	<a href="https://www.baidu.com">{{session['master_city_name']}}房产信息</a><span>></span>
-	<a href="https://www.baidu.com">{{session['master_city_name']}}58出租</a>
+	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}58同城</a><span>></span>
+	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}房产信息</a><span>></span>
+	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}58出租</a>
 </p>
 {% endblock %}
