--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -45,7 +45,7 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 
 {% block mainlink %}
 <p>
-	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}58同城</a><span>></span>
+	<a style="text-decoration-line: none;" href="https://www.baidu.com">{{session['master_city_name']}}58同城</a><span>></span>
 	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}房产信息</a><span>></span>
 	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}58出租</a>
 </p>
