--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -46,7 +46,13 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 {% block mainlink %}
 <p>
 	<a style="text-decoration-line: none;" href="https://www.baidu.com">{{session['master_city_name']}}58同城</a><span>></span>
-	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}房产信息</a><span>></span>
-	<a class="href-non-line" href="https://www.baidu.com">{{session['master_city_name']}}58出租</a>
+	<a style="text-decoration-line: none;" href="https://www.baidu.com">{{session['master_city_name']}}房产信息</a><span>></span>
+	<a style="text-decoration-line: none;" href="https://www.baidu.com">{{session['master_city_name']}}58出租</a>
+</p>
+<p>
+	<a href="https://www.baidu.com">区域^</a>
+	<a href="https://www.baidu.com">地铁线路^</a>
+	<a href="https://www.baidu.com">{{session['master_city_name']}}小区</a>
+	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
 {% endblock %}
