--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -50,8 +50,8 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 	<a style="text-decoration-line: none;" href="https://www.baidu.com">{{session['master_city_name']}}58出租</a>
 </p>
 <p>
-	<a href="https://www.baidu.com">区域^</a>
-	<a href="https://www.baidu.com">地铁线路^</a>
+	<a href="https://www.baidu.com">区域^</a>&nbsp;&nbsp;&nbsp;
+	<a href="https://www.baidu.com">地铁线路^</a>&nbsp;&nbsp;&nbsp;
 	<a href="https://www.baidu.com">{{session['master_city_name']}}小区</a>
 	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
