--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -55,4 +55,12 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 	<a href="https://www.baidu.com">{{session['master_city_name']}}小区</a>
 	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
+<div class="radio">
+  <label>
+    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>选项 1
+  </label>
+  <label>
+    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">选项 2 - 选择它将会取消选择选项 1
+  </label>
+</div>
 {% endblock %}
