更换固定地名为变量地名

--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -247,8 +247,8 @@
 				<table class="table table-hover table-responsive">
 					<caption>
 						<ul class="list-inline">
-							<a class="cont-main-text" href="https://www.baidu.com">杭州房产</a>
-							<a class="cont-sed-text" href="https://www.baidu.com">杭州房产</a>
+							<a class="cont-main-text" href="https://www.baidu.com">{{session['master_city_name']}}房产</a>
+							<a class="cont-sed-text" href="https://www.baidu.com">{{session['master_city_name']}}房产</a>
 						</ul>
 					</caption>
 					<tbody>
@@ -842,7 +842,7 @@
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
-							 <a class="cont-main-text" href="https://www.baidu.com">杭州交友</a>
+							 <a class="cont-main-text" href="https://www.baidu.com">{{session['master_city_name']}}交友</a>
 						 </ul>
 					 </caption>
 					 <tbody>
@@ -875,7 +875,7 @@
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
-							 <a class="cont-main-text" href="https://www.baidu.com">杭州招聘</a>
+							 <a class="cont-main-text" href="https://www.baidu.com">{{session['master_city_name']}}招聘</a>
 							 <a class="cont-sed-text" href="https://www.baidu.com">知名企业</a>
 							 <a class="cont-sed-text" href="https://www.baidu.com">全民涨薪季</a>
 							 <a class="cont-sed-text" href="https://www.baidu.com">热门兼职</a>
@@ -1002,7 +1002,7 @@
 				 <table class="table table-hover table-responsive">
 					 <caption>
 						 <ul class="list-inline">
-							 <a class="cont-main-text" href="https://www.baidu.com">杭州兼职</a>
+							 <a class="cont-main-text" href="https://www.baidu.com">{{session['master_city_name']}}兼职</a>
 							 <a class="cont-sed-text" href="https://www.baidu.com">学生兼职</a>
 							 <a class="cont-sed-text" href="https://www.baidu.com">工资日结</a>
 							 <a class="cont-sed-text" href="https://www.baidu.com">放心兼职</a>
@@ -1053,7 +1053,7 @@
 					 <caption>
 						 <ul class="list-inline">
 							 <a class="cont-main-text" href="https://www.baidu.com">热门行业</a>
-							 <a class="cont-sed-text" href="https://www.baidu.com">杭州招聘会</a>
+							 <a class="cont-sed-text" href="https://www.baidu.com">{{session['master_city_name']}}招聘会</a>
 						 </ul>
 					 </caption>
 					 <tbody>
@@ -1413,7 +1413,7 @@
 						 </td>
 					 </tr>
 					 <tr>
-					 <a><h4>杭州房产</h4></a>
+					 <a><h4>{{session['master_city_name']}}房产</h4></a>
 						 <td><a href="https://www.baidu.com">加盟即赚</a></td>
 						 <td colspan="6">
 							 <a href="https://www.baidu.com">特色</a>
@@ -1554,7 +1554,7 @@
 						 <ul class="list-inline">
 							 <a class="cont-main-text" href="https://www.baidu.com">医疗健康</a>
 							 <a class="cont-sed-text" href="https://www.baidu.com">住院挂号&nbsp;&nbsp;</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		&nbsp;&nbsp;&nbsp;&nbsp;<a class="cont-main-text" href="https://www.baidu.com">杭州团购</a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a class="cont-main-text" href="https://www.baidu.com">{{session['master_city_name']}}团购</a>
 						 </ul>
 					 </caption>
 					 <tbody>
@@ -1639,7 +1639,7 @@
 						 <table class="table">
 							 <caption>
 								 <ul class="list-inline">
-									 <a href="https://www.baidu.com">杭州房产</a>
+									 <a href="https://www.baidu.com">{{session['master_city_name']}}房产</a>
 								 </ul>
 							 </caption>
 							 <tbody>
@@ -1662,7 +1662,7 @@
 						 <table class="table">
 							 <caption>
 								 <ul class="list-inline">
-									 <a href="https://www.baidu.com">杭州房产</a>
+									 <a href="https://www.baidu.com">{{session['master_city_name']}}房产</a>
 								 </ul>
 							 </caption>
 							 <tbody>
@@ -1685,7 +1685,7 @@
 						 <table class="table">
 							 <caption>
 								 <ul class="list-inline">
-									 <a href="https://www.baidu.com">杭州房产</a>
+									 <a href="https://www.baidu.com">{{session['master_city_name']}}房产</a>
 								 </ul>
 							 </caption>
 							 <tbody>
@@ -1708,7 +1708,7 @@
 						 <table class="table">
 							 <caption>
 								 <ul class="list-inline">
-									 <a href="https://www.baidu.com">杭州房产</a>
+									 <a href="https://www.baidu.com">{{session['master_city_name']}}房产</a>
 								 </ul>
 							 </caption>
 							 <tbody>
@@ -1731,7 +1731,7 @@
 						 <table class="table">
 							 <caption>
 								 <ul class="list-inline">
-									 <a href="https://www.baidu.com">杭州房产</a>
+									 <a href="https://www.baidu.com">{{session['master_city_name']}}房产</a>
 								 </ul>
 							 </caption>
 							 <tbody>
@@ -1813,12 +1813,12 @@
 	<a  href="https://www.baidu.com">居泰隆实体家居</a>
 	<a  href="https://www.baidu.com">中国黄页网</a>
 	<a  href="https://www.baidu.com">易坦网</a>
-	<a  href="https://www.baidu.com">杭州汽车网</a>
+	<a  href="https://www.baidu.com">{{session['master_city_name']}}汽车网</a>
 	<a  href="https://www.baidu.com">清华大学研修班</a>
-	<a  href="https://www.baidu.com">杭州地图</a>
+	<a  href="https://www.baidu.com">{{session['master_city_name']}}地图</a>
 	<a  href="https://www.baidu.com">幼儿教育</a>
-	<a  href="https://www.baidu.com">杭州装修网</a>
-	<a  href="https://www.baidu.com">杭州房产网</a>
+	<a  href="https://www.baidu.com">{{session['master_city_name']}}装修网</a>
+	<a  href="https://www.baidu.com">{{session['master_city_name']}}房产网</a>
 	<a  href="https://www.baidu.com">梦婚礼</a>
 	<a  href="https://www.baidu.com">更多...</a>
 </ul>
