把链接添加到主页中

--- a/pro/templates/default.html
+++ b/pro/templates/default.html
@@ -253,7 +253,7 @@
 					</caption>
 					<tbody>
 					<tr>
-						<td><a href="https://www.baidu.com">房屋出租</a></td>
+						<td><a targe="_blank" href="/fangwuchuzu">房屋出租</a></td>
 						<td>
 							<a href="https://www.baidu.com">整租</a>
 							<a href="https://www.baidu.com">/合租</a>
