函数格式规范和加入首页链接

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -10,10 +10,10 @@
 <div class="container search">
 	<div class="row">
 		<div class="col-md-2">
-			<a href="#"><img class="search-width" src="/static/img/logo-o.png" alt="通用的占位符缩略图"></a>
+			<a href="/"><img class="search-width" src="/static/img/logo-o.png" alt="通用的占位符缩略图"></a>
 		</div>
 		<div class="col-md-2">
-			<a href="#"><img class="search-width" src="/static/img/logo-o.png" alt="通用的占位符缩略图"></a>
+			<a href="/"><img class="search-width" src="/static/img/logo-o.png" alt="通用的占位符缩略图"></a>
 		</div>
 		<div class="col-md-6">
 			<div class="row">
