--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -55,12 +55,24 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 	<a href="https://www.baidu.com">{{session['master_city_name']}}小区</a>
 	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
-<div class="radio">
-  <label>
-    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>选项 1
-  </label>
-  <label>
-    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">选项 2 - 选择它将会取消选择选项 1
-  </label>
+<div>
+	<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/> 北京 </label>
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 北京 </label>
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 北京 </label> 
+</div>
+<p>
+	<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/> 600元以下 </label>
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 600-1000元 </label>
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 1000-1500元 </label> 
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 1500-2000元 </label> 
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 2000-3000元 </label> 
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 3000-5000元 </label> 
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 5000-8000元 </label> 
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 8000元以上 </label>
+	<label for="man2"> <input type="text" name="man" id="man2"/></label>
+	<label for="man2"> <input type="text" name="man" id="man2"/> 8000元以上 </label>
+	<label for="man2"> <input type="btn btn-default" name="man" id="man2"/>价格筛选</label>
+</p>
+
 </div>
 {% endblock %}
