--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -56,23 +56,90 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
 <div>
-	<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/> 北京 </label>
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 北京 </label>
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 北京 </label> 
+	<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>北京</label>
+	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>天津</label> 
 </div>
-<p>
-	<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/> 600元以下 </label>
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 600-1000元 </label>
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 1000-1500元 </label> 
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 1500-2000元 </label> 
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 2000-3000元 </label> 
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 3000-5000元 </label> 
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 5000-8000元 </label> 
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/> 8000元以上 </label>
-	<label for="man2"> <input type="text" name="man" id="man2"/></label>
-	<label for="man2"> <input type="text" name="man" id="man2"/> 8000元以上 </label>
-	<label for="man2"> <input type="btn btn-default" name="man" id="man2"/>价格筛选</label>
-</p>
+<div>
+	<p>
+		<label for="jiage"> 租金:</label>
+		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>600元以下</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>600-1000元</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1000-1500元</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1500-2000元</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>2000-3000元</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>3000-5000元</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>5000-8000元</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>8000元以上</label>
+		<label for="man2"> <input type="text" style="width:70px;height:20px;" name="man" id="man2"/> — </label>
+		<label for="man2"> <input type="text" style="width:70px;height:20px;" name="man" id="man2"/></label>
+		<label for="man2"> <button type="btn btn-default"  style="height:20px;" name="man" id="man2"/>价格筛选</label>
+	</p>
+</div>
+<div>
+	<p>
+		<label for="jiage"> 厅室:</label>
+		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
+		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>一室</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>两室</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>三室</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>四室</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>四室以上</label>
+	</p>
+	<p>
+		<label for="jiage"> 方式:</label>
+		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>整套出租</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>单间出租</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>床位出租</label> 
+	</p>
+	<p>
+		<label for="jiage"> 品牌:</label>
+		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>我爱我家</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>兴达置业</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>中天置地</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>麦田房产</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>21世纪不动产</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>中原地产</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>华熙地产</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>兴商房地产</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>易合房地产</label> 
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>吉永达地产</label>
+	</p>
+	<p>
+		<label for="jiage"> 其他:</label>
+		<label for="jiage">
+			<select>
+				<option value="volvo">朝向不限</option>
+				<option value="saab">东</option>
+				<option value="opel">南</option>
+				<option value="audi">西</option>
+				<option value="saab">北</option>
+				<option value="opel">南北</option>
+				<option value="audi">东西</option>
+				<option value="saab">东南</option>
+				<option value="opel">东北</option>
+				<option value="audi">西南</option>
+				<option value="saab">西北</option>
+			</select>
+		</label>
+		<label for="jiage">
+			<select>
+				<option value="volvo">装修不限</option>
+				<option value="saab">毛坯</option>
+				<option value="opel">简单装修</option>
+				<option value="audi">中等装修</option>
+				<option value="saab">精装修</option>
+				<option value="opel">豪华装修</option>
+			</select>
+		</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>600-1000元</label>
+		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1000-1500元</label> 
+		<label for="man2"> <input type="checkbox" value="女" style="visibility: hidden;" name="man" id="man2"/>1500-2000元</label> 
+		<label for="man2"> <input type="checkbox" value="女" style="visibility: hidden;" name="man" id="man2"/>2000-3000元</label> 
+	</p>
+</div>
 
 </div>
 {% endblock %}
