--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -134,10 +134,8 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 				<option value="opel">豪华装修</option>
 			</select>
 		</label>
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>600-1000元</label>
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1000-1500元</label> 
-		<label for="man2"> <input type="checkbox" value="女" style="visibility: hidden;" name="man" id="man2"/>1500-2000元</label> 
-		<label for="man2"> <input type="checkbox" value="女" style="visibility: hidden;" name="man" id="man2"/>2000-3000元</label> 
+		<label for="man2"> <input type="checkbox" value="女" name="man" id="man2"/>只看有图</label> 
+		<label for="man2"> <input type="checkbox" value="女" name="man" id="man2"/>帮帮在线</label> 
 	</p>
 </div>
 
