丰富房产页

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -55,12 +55,12 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 	<a href="https://www.baidu.com">{{session['master_city_name']}}小区</a>
 	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
-<div>
+<div style="font-size:2">
 	<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
 	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>北京</label>
 	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>天津</label> 
 </div>
-<div>
+<div style="font-size: 2">
 	<p>
 		<label for="jiage"> 租金:</label>
 		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>600元以下</label>
@@ -76,7 +76,7 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 		<label for="man2"> <button type="btn btn-default"  style="height:20px;" name="man" id="man2"/>价格筛选</label>
 	</p>
 </div>
-<div>
+<div style="font-size: 2">
 	<p>
 		<label for="jiage"> 厅室:</label>
 		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
