--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -73,7 +73,7 @@ $("#one_search_text").select2({tags:["red", "green", "blue"]});
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>8000元以上</label>
 		<label for="man2"> <input type="text" style="width:70px;height:20px;" name="man" id="man2"/> — </label>
 		<label for="man2"> <input type="text" style="width:70px;height:20px;" name="man" id="man2"/></label>
-		<label for="man2"> <button type="btn btn-default"  style="height:20px;" name="man" id="man2"/>价格筛选</label>
+		<label for="man2"> <button type="btn btn-default"  style="height:20px;" name="man" id="man2" onclick="set_fangwu_chaxun()" />价格筛选</label>
 	</p>
 </div>
 <div style="font-size: 2">
