注释掉select2插件

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -39,7 +39,7 @@
 </div>
 <script>
 $("#sech-btn").bind("click",test);
-$("#one_search_text").select2({tags:["red", "green", "blue"]});
+//$("#one_search_text").select2({tags:["red", "green", "blue"]});
 </script>
 {% endblock %}
 
