加入动态增加展示子节点

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -55,8 +55,8 @@ $("#sech-btn").bind("click",test);
 	<a href="https://www.baidu.com">{{session['master_city_name']}}小区</a>
 	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
-<div style="font-size:2">
-	<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
+<div style="font-size:2" id="child_city_names">
+	<label for="child_city"> <input type="radio" value="男" style="visibility: hidden;" name="child_city" id="man"/>不限</label>
 	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>北京</label>
 	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>天津</label> 
 </div>
