--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -56,14 +56,11 @@ $("#sech-btn").bind("click",test);
 	<a class="pull-right" href="https://www.baidu.com">轻松一点，地图找房</a>
 </p>
 <div style="font-size:2" id="child_city_names">
-	<label for="child_city"> <input type="radio" value="男" style="visibility: hidden;" name="child_city" id="man"/>不限</label>
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>北京</label>
-	<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>天津</label> 
 </div>
-<div style="font-size: 2">
+<div style="font-size: 2" id="city_fangzu_levels">
 	<p>
-		<label for="jiage"> 租金:</label>
-		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>600元以下</label>
+		<label for="fang_zus"> 租金:</label>
+		<label for="fang_zus"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>600元以下</label>
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>600-1000元</label>
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1000-1500元</label> 
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1500-2000元</label> 
