--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -58,20 +58,6 @@ $("#sech-btn").bind("click",test);
 <div style="font-size:2" id="child_city_names">
 </div>
 <div style="font-size: 2" id="city_fangzu_levels">
-	<p>
-		<label for="fang_zus"> 租金:</label>
-		<label for="fang_zus"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>900元以下</label>
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>600-1000元</label>
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1000-1500元</label> 
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>1500-2000元</label> 
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>2000-3000元</label> 
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>3000-5000元</label> 
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>5000-8000元</label> 
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>8000元以上</label>
-		<label for="man2"> <input type="text" style="width:70px;height:20px;" name="man" id="man2"/> — </label>
-		<label for="man2"> <input type="text" style="width:70px;height:20px;" name="man" id="man2"/></label>
-		<label for="man2"> <button type="btn btn-default"  style="height:20px;" name="man" id="man2" onclick="set_fangwu_chaxun()" />价格筛选</label>
-	</p>
 </div>
 <div style="font-size: 2">
 	<p>
@@ -90,10 +76,12 @@ $("#sech-btn").bind("click",test);
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>单间出租</label> 
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>床位出租</label> 
 	</p>
+</div>
+<div id="brand_agents">
 	<p>
-		<label for="jiage"> 品牌:</label>
-		<label for="jiage"> <input type="radio" value="男" style="visibility: hidden;" name="man" id="man"/>不限</label>
-		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>我爱我家</label>
+		<label for="brand"> 品牌:</label>
+		<label for="agents"> <input type="radio" value="男" style="visibility: hidden;" name="agents" id="man"/>不限</label>
+		<label for="agents"> <input type="radio" value="女" style="visibility: hidden;" name="agents" id="man2"/>我爱我家</label>
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>兴达置业</label> 
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>中天置地</label> 
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>麦田房产</label> 
@@ -104,6 +92,8 @@ $("#sech-btn").bind("click",test);
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>易合房地产</label> 
 		<label for="man2"> <input type="radio" value="女" style="visibility: hidden;" name="man" id="man2"/>吉永达地产</label>
 	</p>
+</div>
+<div>
 	<p>
 		<label for="jiage"> 其他:</label>
 		<label for="jiage">
