动态增加品牌房产中介名称

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -125,6 +125,7 @@ $("#sech-btn").bind("click",test);
 		<label for="man2"> <input type="checkbox" value="女" name="man" id="man2"/>帮帮在线</label> 
 	</p>
 </div>
-
+<div>
+	<button type="button" class="btn btn-danger" onclick="set_fangwu_chaxun()">危险按钮</button>
 </div>
 {% endblock %}
