增加自动初始化页面

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -115,3 +115,8 @@ $("#sech-btn").bind("click",test);
 	<button type="button" class="btn btn-danger" onclick="set_fangwu_chaxun()">危险按钮</button>
 </div>
 {% endblock %}
+{% block jsb %}
+$(funciton(){
+	init_fangwu_chaxun();
+});
+{% endblock %}
