增加自动初始化页面

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -116,7 +116,9 @@ $("#sech-btn").bind("click",test);
 </div>
 {% endblock %}
 {% block jsb %}
-$(funciton(){
-	init_fangwu_chaxun();
-});
+<script type="text/javascript">
+	$(funciton(){
+		init_fangwu_chaxun();
+	});
+</script>
 {% endblock %}
