加入导航选择卡

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -112,4 +112,14 @@ init_fangwu_chaxun();
 		<label for="helponline"> <input type="checkbox" value="0" name="helponline" id="help_online"/>帮帮在线</label> 
 	</p>
 </div>
+<div>
+	<ul class="nav nav-pills">
+		<li class="active"><a href="https://www.baidu.com">北京出租</a></li>
+		<li class="active"><a href="https://www.baidu.com">个人房源</a></li>
+		<li class="active"><a href="https://www.baidu.com">经纪人</a></li>
+		<li class="active"><a href="https://www.baidu.com">热租房源</a></li>
+		<li class="active"><a href="https://www.baidu.com">品牌公寓</a></li>
+		<li class="active"><a href="https://www.baidu.com">房屋求租</a></li>
+	</ul>
+</div>
 {% endblock %}
