加入导航选择卡

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -114,12 +114,12 @@ init_fangwu_chaxun();
 </div>
 <div>
 	<ul class="nav nav-pills">
-		<li class="active"><a href="https://www.baidu.com">北京出租</a></li>
-		<li class="active"><a href="https://www.baidu.com">个人房源</a></li>
-		<li class="active"><a href="https://www.baidu.com">经纪人</a></li>
-		<li class="active"><a href="https://www.baidu.com">热租房源</a></li>
-		<li class="active"><a href="https://www.baidu.com">品牌公寓</a></li>
-		<li class="active"><a href="https://www.baidu.com">房屋求租</a></li>
+		<li class="active"><a href="">北京出租</a></li>
+		<li class=""><a href="">个人房源</a></li>
+		<li class=""><a href="">经纪人</a></li>
+		<li class=""><a href="">热租房源</a></li>
+		<li class=""><a href="">品牌公寓</a></li>
+		<li class=""><a href="">房屋求租</a></li>
 	</ul>
 </div>
 {% endblock %}
