--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -114,12 +114,13 @@ init_fangwu_chaxun();
 </div>
 <div>
 	<ul class="nav nav-pills">
-		<li class="active"><a href="#" data-toggle="tab">北京出租</a></li>
+		<li class=""><a href="#" data-toggle="tab">北京出租</a></li>
 		<li class=""><a href="#" data-toggle="tab">个人房源</a></li>
 		<li class=""><a href="#" data-toggle="tab">经纪人</a></li>
 		<li class=""><a href="#" data-toggle="tab">热租房源</a></li>
 		<li class=""><a href="#" data-toggle="tab">品牌公寓</a></li>
 		<li class=""><a href="#" data-toggle="tab">房屋求租</a></li>
 	</ul>
+	<div></div>
 </div>
 {% endblock %}
