优化选项卡

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -114,13 +114,22 @@ init_fangwu_chaxun();
 </div>
 <div>
 	<ul class="nav nav-pills">
-		<li class=""><a href="#" data-toggle="tab">北京出租</a></li>
-		<li class=""><a href="#" data-toggle="tab">个人房源</a></li>
-		<li class=""><a href="#" data-toggle="tab">经纪人</a></li>
-		<li class=""><a href="#" data-toggle="tab">热租房源</a></li>
-		<li class=""><a href="#" data-toggle="tab">品牌公寓</a></li>
-		<li class=""><a href="#" data-toggle="tab">房屋求租</a></li>
+		<li class="active"><a href="#tab1" data-toggle="tab">北京出租</a></li>
+		<li class=""><a href="#tab2" data-toggle="tab">个人房源</a></li>
+		<li class=""><a href="#tab3" data-toggle="tab">经纪人</a></li>
+		<li class=""><a href="#tab4" data-toggle="tab">热租房源</a></li>
+		<li class=""><a href="#tab5" data-toggle="tab">品牌公寓</a></li>
+		<li class=""><a href="#tab6" data-toggle="tab">房屋求租</a></li>
 	</ul>
-	<div></div>
+	<div>
+		<div class="tab-content">
+			<div class="tab-pane active" id="tab1"><p>北京出租</p></div>
+			<div class="tab-pane" id="tab2"><p>个人房源</p></div>
+			<div class="tab-pane" id="tab3"><p>经纪人</p></div>
+			<div class="tab-pane" id="tab4"><p>热租房源</p></div>
+			<div class="tab-pane" id="tab5"><p>品牌公寓</p></div>
+			<div class="tab-pane" id="tab6"><p>房屋求租</p></div>
+		</div>
+	</div>
 </div>
 {% endblock %}
