变选项卡为单选卡

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -114,7 +114,7 @@ init_fangwu_chaxun();
 </div>
 <div>
 	<ul class="nav nav-pills tabs-bottom-line">
-		<li class="active"><a href="#tab1" data-toggle="tab"><label for="tabpill"> <input type="radio" value="1" style="visibility: hidden;" name="tabpill" id="tap_frist"/>北京出租</label></a></li>
+		<li class="active"><a href="#tab1" data-toggle="tab"><label for="tabpill"> <input type="radio" value="1" style="visibility: hidden;" name="tabpill" id="tap_frist"/>{{session['master_city_name']}}出租</label></a></li>
 		<li class=""><a href="#tab2" data-toggle="tab"><label for="tabpill"> <input type="radio" value="2" style="visibility: hidden;" name="tabpill" id="tab_second"/>个人房源</label></a></li>
 		<li class=""><a href="#tab3" data-toggle="tab"><label for="tabpill"> <input type="radio" value="3" style="visibility: hidden;" name="tabpill" id="tab_thrid"/>经纪人</label></a></li>
 		<li class=""><a href="#tab4" data-toggle="tab"><label for="tabpill"> <input type="radio" value="4" style="visibility: hidden;" name="tabpill" id="tab_fourth"/>热租房源</label></a></li>
