获取出租房检索参数

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -41,6 +41,7 @@
 $("#sech-btn").bind("click",test);
 //$("#one_search_text").select2({tags:["red", "green", "blue"]});
 init_fangwu_chaxun();
+get_estate_rental_result();
 </script>
 {% endblock %}
 
