加载完毕后取值

--- a/pro/templates/sub1/fangwuchuzu.html
+++ b/pro/templates/sub1/fangwuchuzu.html
@@ -41,7 +41,7 @@
 $("#sech-btn").bind("click",test);
 //$("#one_search_text").select2({tags:["red", "green", "blue"]});
 init_fangwu_chaxun();
-get_estate_rental_result();
+//get_estate_rental_result();
 </script>
 {% endblock %}
 
@@ -134,4 +134,7 @@ get_estate_rental_result();
 	</div>
 </div>
 <button class="btn btn-info" id="btn_hanwang"  onclick="get_estate_rental_result();">点我吧</bottom>
+<script>
+	get_estate_rental_result();
+</script>
 {% endblock %}
